updated readme, license, authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,7 @@
-# Names of people who have worked on this project
+The following people are currently working on this project:
+
+Harald Hauknes			harahauk@stud.ntnu.no
+John Hanssen Kolstad		johnhans@stud.ntnu.no
+Lars Vonli 			vonli@stud.ntnu.no
+Runa A. Sandvik 		runasand@stud.ntnu.no
+Torstein Haldorsen 		torsthal@stud.ntnu.no
