--- a/src/pm/README
+++ b/src/pm/README
@@ -15,8 +15,9 @@ The scripts have been tested with Python 2.5.5.
 
     1.2 gpgsign:
 
-        Creates a file with a random string, signs the file using 'gpg
-        --clearsign' and then saves the output in the original file.
+	Creates a file with a random string, writes the file to /tmp,
+	signs the file using 'gpg --clearsign' and then saves the output
+	in the original file.
 
     1.3 show_captcha:
     
@@ -59,9 +60,8 @@ The scripts have been tested with Python 2.5.5.
 
     3.1 gpgsign.py
 
-	You need to set the name of the file you wish to write the random
-	string to. You also need to set the location of the .gnupg directory
-	and the secret passphrase of the GPG key.
+	You need to set the location of the .gnupg directory, as well as
+	the secret passphrase of the GPG key.
 
     3.2 show_captcha.cgi
 
