--- a/src/pm/README
+++ b/src/pm/README
@@ -17,11 +17,11 @@ The scripts have been tested with Python 2.5.2.
     1.2 gpgsign:
 
 	Creates a file with a random string, writes the file to /tmp,
-	signs the file using 'gpg --clearsign' and then saves the output
-	in the original file.
+	signs the file using 'gpg --clearsign' and then saves the output in the
+	original file.
 
     1.3 show_captcha:
-    
+
         This script will simply show a user a CAPTCHA.
 
     1.4 verify_captcha:
@@ -59,7 +59,7 @@ The scripts have been tested with Python 2.5.2.
 
     2.5 File permissions
 
-        In order for the web server to access and run the CGI programs,
+	In order for the web server to access and run the CGI programs,
 	the right permissions will have to be set for the Apache user.
 	The Apache user will also require access to your GPG key. See
 	Section 3 in the HOWTO for more information.
